app/src/main/java/com/example/truckercore/shared/errors/validation/IllegalDocumentParametersException.kt
package com.example.truckercore.shared.errors.validation

class IllegalDocumentParametersException(message: String): Exception(message) {
}